cmake_minimum_required(VERSION 3.14)
project(C__)

set(CMAKE_CXX_STANDARD 14)

add_executable(C__ main.cpp)
add_executable(Address Address/Address.cpp)
add_executable(Change Change.cpp)
add_executable(Pointer Pointer.cpp)
add_executable(PointerCheck PointerCheck.cpp)
add_executable(PointerSwap PointerSwap.cpp)
add_executable(Reference Reference.cpp)
add_executable(ReferenceSwap ReferenceSwap.cpp)
add_executable(ReturnPointer ReturnPointer.cpp)
add_executable(ReturnReference ReturnReference.cpp)
add_executable(fibinacci 斐波那契数列.cpp)
add_executable(factorial 阶乘.cpp)
add_executable(Tricycle Tricycle.cpp)
add_executable(Add Add.cpp)
add_executable(exclusive_OR 异或.cpp)
add_executable(Selection_sort 选择排序.cpp)
add_executable(Bubble_Sort 冒泡排序.cpp)
add_executable(Insertion_Sort 插入排序.cpp)
add_executable(Bucket_sort 桶排序.cpp)
add_executable(Quicksort 快速排序.cpp)
add_executable(Merge_sort 归并排序.cpp)
add_executable(YangHui_triangle1 杨辉三角1.cpp)
add_executable(YangHui_triangle2 杨辉三角2.cpp)
add_executable(YangHui_triangle 杨辉三角.cpp)
add_executable(Single_list 单链表.cpp)
add_executable(Double_linked_list 双链表.cpp)
add_executable(Joseph_ring_problem 约瑟夫环问题.cpp)
#add_executable()
#add_executable(Address)